# owen_hash_experiments

./: .gitignore  Cargo.toml  README.md  build.rs  expected_bias.py  stat_results.txt
burley-scrambling-suppl/: Makefile  README  genpoints.cpp  genpoints.h  main.cpp  radicalinverse.h  sobol.cpp  sobol.h  viewpoints.py
src/: hash_gen.rs  main.rs  r2.rs  sobol.rs  stats.rs
src/sobol/: mod.rs  num_gen.rs
